-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 3.5.12
-
Component/s: Replication
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
During one of the sys perf aggregation tests, the primary of the first shard failed with the following backtrace:
/data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/util/stacktrace_posix.cpp:172:0: mongo::printStackTrace(std::ostream&) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/util/signal_handlers_synchronous.cpp:180:0: mongo::(anonymous namespace)::printSignalAndBacktrace(int) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/util/signal_handlers_synchronous.cpp:237:0: mongo::(anonymous namespace)::abruptQuit(int) ??:0:0: ?? ??:0:0: ?? ??:0:0: ?? /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/util/assert_util.cpp:141:0: mongo::invariantOKFailed(char const*, mongo::Status const&, char const*, unsigned int) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp:1676:0: mongo::WiredTigerRecordStore::cappedTruncateAfter(mongo::OperationContext*, mongo::RecordId, bool) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/catalog/collection_impl.cpp:885:0: mongo::CollectionImpl::cappedTruncateAfter(mongo::OperationContext*, mongo::RecordId, bool) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/catalog/collection.h:637:0: mongo::Collection::cappedTruncateAfter(mongo::OperationContext*, mongo::RecordId, bool) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/rs_rollback.cpp:1381:0: mongo::repl::rollback_internal::syncFixUp(mongo::OperationContext*, mongo::repl::rollback_internal::FixUpInfo const&, mongo::repl::RollbackSource const&, mongo::repl::ReplicationCoordinator*, mongo::repl::ReplicationProcess*) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/rs_rollback.cpp:929:0: _syncRollback /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/rs_rollback.cpp:1412:0: mongo::repl::syncRollback(mongo::OperationContext*, mongo::repl::OplogInterface const&, mongo::repl::RollbackSource const&, int, mongo::repl::ReplicationCoordinator*, mongo::repl::ReplicationProcess*) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/rs_rollback.cpp:1451:0: mongo::repl::rollback(mongo::OperationContext*, mongo::repl::OplogInterface const&, mongo::repl::RollbackSource const&, int, mongo::repl::ReplicationCoordinator*, mongo::repl::ReplicationProcess*, std::function<void (int)>) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/bgsync.cpp:763:0: mongo::repl::BackgroundSync::_fallBackOnRollbackViaRefetch(mongo::OperationContext*, mongo::HostAndPort const&, int, mongo::repl::OplogInterface*, bool, std::function<mongo::DBClientBase* ()>) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/bgsync.cpp:694:0: mongo::repl::BackgroundSync::_runRollback(mongo::OperationContext*, mongo::Status const&, mongo::HostAndPort const&, int, mongo::repl::StorageInterface*) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/bgsync.cpp:516:0: mongo::repl::BackgroundSync::_produce(mongo::OperationContext*) /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/bgsync.cpp:274:0: mongo::repl::BackgroundSync::_runProducer() /data/mci/2244ff45fe11239a32115d5ad616b9f0/src/src/mongo/db/repl/bgsync.cpp:231:0: mongo::repl::BackgroundSync::_run() /data/mci/7c12b94560113a33bce052faea90f386/toolchain-builder/build-gcc-v2.sh-Cox/x86_64-mongodb-linux/libstdc++-v3/src/c++11/../../../../../gcc-5.4.0/libstdc++-v3/src/c++11/thread.cc:84:0: execute_native_thread_routine ??:0:0: ?? ??:0:0: ??
- related to
-
SERVER-123285 revisit rollback common optime constraints
-
- Closed
-