SERVER-30940 make sure we never roll back behind commit point